# diskspace-monitor-CRUD

./: .gitignore  .pre-commit-config.yaml  API_Documentation.md  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
scripts/: example_automated_api_calls.py
src/diskspacemonitor/: main.py  models.py  settings.py  utils.py  warn.py
src/diskspacemonitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diskspacemonitor/api/v1/: main.py
src/diskspacemonitor/models/: component_event.py  resource_warning.py  system_component.py
tests/: conftest.py
tests/test_api/: test_api.py
tests/test_models/: test_agent.py  test_system_component.py
