[metadata]
name = diskspacemonitor
description = a REST API for monitoring components of a build system
author = Nick Hopewell
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    diskspacemonitor
install_requires =
    fastapi>0.7
    pydantic>1
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.8

[flake8]
max-line-length = 160
ignore = E203
